--- a/CupBucks/res/layout/activity_main.xml
+++ b/CupBucks/res/layout/activity_main.xml
@@ -1,18 +1,32 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center_horizontal"
+    android:fillViewport="true" >
 
-    <RelativeLayout
-    	android:id="@+id/RelativeLayoutMap"
-	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent">
-	 
-    	<fragment
-          android:id="@+id/map"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:name="com.google.android.gms.maps.MapFragment"/>
-	 	
-	</RelativeLayout>
-    
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+       <fragment
+           android:id="@+id/map"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           class="com.google.android.gms.maps.MapFragment" />
+
+         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+		      	<ListView
+		   		    android:id="@+id/ListView"
+		   		    android:layout_width="match_parent"
+		   		    android:layout_height="fill_parent"
+		   		    android:dividerHeight="1dp" >
+        </ListView>
+
+        </LinearLayout>
+    </LinearLayout>
+</ScrollView>
